--- a/games/golden_sun/config.json
+++ b/games/golden_sun/config.json
@@ -1,129 +1,1 @@
-{
-    "widths": {
-        "!": 8,
-        "\"": 8,
-        "#": 8,
-        "$": 8,
-        "%": 8,
-        "&": 8,
-        "'": 8,
-        "(": 8,
-        ")": 8,
-        "*": 8,
-        "+": 8,
-        ",": 8,
-        "-": 8,
-        ".": 8,
-        "/": 8,
-        "0": 8,
-        "1": 8,
-        "2": 8,
-        "3": 8,
-        "4": 8,
-        "5": 8,
-        "6": 8,
-        "7": 8,
-        "8": 8,
-        "9": 8,
-        ":": 8,
-        ";": 8,
-        "<": 8,
-        "=": 8,
-        ">": 8,
-        "?": 8,
-        "@": 8,
-        "A": 8,
-        "B": 8,
-        "C": 8,
-        "D": 8,
-        "E": 8,
-        "F": 8,
-        "G": 8,
-        "H": 8,
-        "I": 8,
-        "J": 8,
-        "K": 8,
-        "L": 8,
-        "M": 8,
-        "N": 8,
-        "O": 8,
-        "P": 8,
-        "Q": 8,
-        "R": 8,
-        "S": 8,
-        "T": 8,
-        "U": 8,
-        "V": 8,
-        "W": 8,
-        "X": 8,
-        "Y": 8,
-        "Z": 8,
-        "[": 8,
-        "\u00a5": 8,
-        "]": 8,
-        "^": 8,
-        "_": 8,
-        "\u00b1": 8,
-        "a": 8,
-        "b": 8,
-        "c": 8,
-        "d": 8,
-        "e": 8,
-        "f": 8,
-        "g": 8,
-        "h": 8,
-        "i": 8,
-        "j": 8,
-        "k": 8,
-        "l": 8,
-        "m": 8,
-        "n": 8,
-        "o": 8,
-        "p": 8,
-        "q": 8,
-        "r": 8,
-        "s": 8,
-        "t": 8,
-        "u": 8,
-        "v": 8,
-        "w": 8,
-        "x": 8,
-        "y": 8,
-        "z": 8,
-        "{": 8,
-        "|": 8,
-        "}": 8,
-        "~": 8,
-        "block": 8,
-        "a_button": 8,
-        " ": 8,
-        "b_button": 8,
-        "l_button_1": 8,
-        "l_button_2": 8,
-        "r_button_1": 8,
-        "r_button_2": 8,
-        "start_button_1": 8,
-        "start_button_2": 8,
-        "select_button_1": 8,
-        "select_button_2": 8
-    },
-    "special_chars": [
-        "block",
-        "a_button",
-        " ",
-        "b_button",
-        " ",
-        "l_button_1",
-        "l_button_2",
-        "r_button_1",
-        "r_button_2",
-        "start_button_1",
-        "start_button_2",
-        "select_button_1",
-        "select_button_2",
-        " "
-    ],
-    "tile_width": 8,
-    "tile_height": 8,
-    "number_of_tiles": 112
-}
+{"widths": {"!": 7, "\"": 1, "#": 5, "$": 1, "%": 0, "&": 6, "'": 7, "(": 5, ")": 4, "*": 6, "+": 2, ",": 3, "-": 2, ".": 3, "/": 3, "0": 2, "1": 7, "2": 3, "3": 7, "4": 6, "5": 4, "6": 4, "7": 3, "8": 7, "9": 7, ":": 1, ";": 5, "<": 4, "=": 6, ">": 4, "?": 7, "@": 6, "A": 7, "B": 7, "C": 0, "D": 3, "E": 4, "F": 4, "G": 7, "H": 5, "I": 5, "J": 7, "K": 6, "L": 3, "M": 4, "N": 7, "O": 3, "P": 7, "Q": 7, "R": 5, "S": 0, "T": 7, "U": 3, "V": 3, "W": 0, "X": 2, "Y": 7, "Z": 7, "[": 5, "\u00a5": 6, "]": 7, "^": 3, "_": 6, "\u00b1": 3, "a": 5, "b": 3, "c": 1, "d": 7, "e": 5, "f": 0, "g": 5, "h": 6, "i": 4, "j": 2, "k": 7, "l": 1, "m": 3, "n": 1, "o": 7, "p": 3, "q": 7, "r": 7, "s": 4, "t": 7, "u": 6, "v": 6, "w": 7, "x": 7, "y": 5, "z": 7, "{": 3, "|": 6, "}": 3, "~": 6, "block": 5, "a_button": 6, " ": 5, "b_button": 7, "l_button_1": 2, "l_button_2": 3, "r_button_1": 5, "r_button_2": 6, "start_button_1": 0, "start_button_2": 5, "select_button_1": 2, "select_button_2": 7}, "special_chars": ["block", "a_button", " ", "b_button", " ", "l_button_1", "l_button_2", "r_button_1", "r_button_2", "start_button_1", "start_button_2", "select_button_1", "select_button_2", " "], "tile_width": 8, "tile_height": 8, "number_of_tiles": 106}
